Uploading wordAdventure to portfolio repository.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /word-Adventure-Portfolio/word-Adventure-Portfolio/obj
 /word-Adventure-Portfolio/.vs/word-Adventure-Portfolio/CopilotIndices/0.2.1657.32929
+/.vs
+/wordAdventure/.vs/wordAdventure
